docs: update v3 docs with policy contracts

--- a/apps/website/blog/2024-08-10-maci-v2.md
+++ b/apps/website/blog/2024-08-10-maci-v2.md
@@ -52,7 +52,7 @@ Custom Gatekeepers are a great way to guard MACI against Sybil attacks, and with
 
 For instance, with Gitcoin Passport as the gatekeeper, the MACI round organiser can set a threshold score and only allow new users with a passport score greater or equal to that threshold. Additionally, with Zupass, we can now gate access to holders of specific event tickets.
 
-We expect to continue to expand our [gatekeeper capabilities](https://github.com/privacy-scaling-explorations/maci/tree/dev/packages/contracts/contracts/gatekeepers) and welcome the community to come up with new and innovative ways to grant access to MACI's rounds, helping make MACI more customizable and sybil-resilient.
+We expect to continue to expand our [gatekeeper capabilities](https://github.com/privacy-scaling-explorations/maci/blob/v2.5.0/packages/contracts/contracts/gatekeepers) and welcome the community to come up with new and innovative ways to grant access to MACI's rounds, helping make MACI more customizable and sybil-resilient.
 
 ## Documentation
 
