--- a/apps/website/blog/2025-03-21-roadmap-2025.md
+++ b/apps/website/blog/2025-03-21-roadmap-2025.md
@@ -57,7 +57,7 @@ Up until now, MACI has not prioritised reusability of the smart contracts. More 
 
 1. The main MACI contract is set to gatekeep access using a very strong sybil mechanism, such as proof of passport
 2. Users signup by proving they are human
-3. For each poll that is created, voters can join with the same key if they wish to participate and if they can pass the specific poll gatekeeping requirements. For instance a specific poll might allow only Indian voters, thus use a Anon Adhaar gatekeeper to gate access
+3. For each poll that is created, voters can join with the same key if they wish to participate and if they can pass the specific poll gatekeeping requirements. For instance a specific poll might allow only Indian voters, thus use a Anon Adhaar policy to gate access
 
 ### User research
 
