docs: update v3 docs and cleanup

--- a/apps/website/blog/2024-08-10-maci-v2.md
+++ b/apps/website/blog/2024-08-10-maci-v2.md
@@ -64,7 +64,7 @@ We continue to use [our docs website](/) as the definitive resource for all info
 
 As usual before a major release, the protocol has been thoroughly audited by PSE's internal Audit team, and this time no significant issues were found. However, thanks to the auditors' hard work, we have been able to further optimise the protocol and clean up our technical documentation.
 
-For more details on this recent audit, please refer to our [audit docs](/docs/security/audit#pse-audit-2024-07) or [view the full report](/audit_reports/20240731_PSE_Audit_audit_report.pdf).
+For more details on this recent audit, please refer to our [audit docs](/docs/security/audit#pse-audit-202407) or [view the full report](/audit_reports/20240731_PSE_Audit_audit_report.pdf).
 
 With more and more eyes on the protocol, we feel more and more confident about MACI's security posture.
 
