docs: add entries for coordinator and relayer services

--- a/apps/website/blog/2025-03-21-roadmap-2025.md
+++ b/apps/website/blog/2025-03-21-roadmap-2025.md
@@ -1,5 +1,5 @@
 ---
-slug: 2025 Roadmap
+slug: 2025-Roadmap
 title: 2025 High Level Roadmap and recap
 description: High level roadmap for 2025
 authors:
